source/styles/blocks/range.scss
.range {
  display: grid;
  grid-template-columns: 118px 118px;
  justify-content: space-between;
  gap: 22px 0;
}

.range__scale {
  position: relative;
  grid-column: 1 / -1;
  min-height: 24px;
}

.range__scale::before {
  position: absolute;
  top: 10px;
  right: 20px;
  left: 0;
  height: 2px;
  background-color: $color-base-grey;
  content: "";
}

.range__scale::after {
  position: absolute;
  top: 8px;
  left: 11px;
  width: 241px;
  height: 4px;
  background-color: $color-primary-lighter;
  content: "";
}

.range__scale-handle {
  position: absolute;
  top: 0;
  z-index: 1;
  width: 24px;
  height: 24px;
  background-color: $color-base-white;
  border: 2px solid $color-primary-lighter;
  border-radius: 50%;
}

.range__scale-handle--min {
  left: 0;
}

.range__scale-handle--max {
  left: 236px;
}

.range__field {
  position: relative;
}

.range__field:first-of-type::after {
  position: absolute;
  top: 19px;
  right: -26px;
  width: 8px;
  height: 2px;
  background-color: $color-base-grey;
  content: "";
}

.range__input {
  width: 100%;
  min-height: 40px;
  padding: 8px 10px;
  font-family: $font-primary;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: $color-base-dark;
  text-align: center;
  border: 2px solid $color-base-primary;
  border-radius: 4px;
}

.range__field:first-of-type .range__input {
  color: $color-base-grey;
}

@media (min-width: $tablet-width) {
  .range {
    grid-template-columns: 87px 88px;
  }

  .range__scale::after {
    left: 8px;
    width: 192px;
  }

  .range__scale-handle--max {
    left: 179px;
  }

  .range__field:first-of-type::after {
    right: -32px;
  }
}

@media (min-width: $desktop-width) {
  .range {
    grid-template-columns: 134px 134px;
  }

  .range__scale::after {
    left: 12px;
    width: 274px;
  }

  .range__scale-handle--max {
    left: 274px;
  }

  .range__field:first-of-type::after {
    right: -30px;
    width: 10px;
  }
}

